--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 <img class="img-fluid" src="japan3.gif" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">ECrouching Tiger</div>
+                                <div class="portfolio-caption-heading">Crouching Tiger</div>
                                 <div class="portfolio-caption-subheading text-muted">Hidden Torro</div>
                             </div>
                         </div>
@@ -155,13 +155,6 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/portfolio/06-thumbnail.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Window</div>
@@ -181,7 +174,7 @@
                 </div>
                 <ul class="timeline">
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="pexels-cottonbro-3338496" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="pexels-cottonbro-3338496.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>2009-2011</h4>
