--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 <form id="contactForm" name="sentMessage" novalidate="novalidate" action="https://formspree.io/f/meqvepyl" method="POST">
                     <div class="row align-items-stretch mb-5">
                         <div class="col-md-6">
-                            <div class="form-group">
+                            <div class="form-group"action="https://formspree.io/f/meqvepyl" method="POST>
                                 <input class="form-control" id="name" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name." />
                                 <p class="help-block text-danger"></p>
                             </div>
