--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">&#127843;</h2>
-                    <h3 class="section-subheading text-muted">Our goal is to help sushi bars across the global by giving them a decentralized static website for a one time low fee.</h3>
+                    <h3 class="section-subheading text-muted">Our goal is to help sushi bars across the world by giving them a decentralized static website for a one time low fee.</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -73,7 +73,7 @@
                             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">100% Decentralized</h4>
-                        <p class="text-muted">These static websites are built on the Handshake blockchain and are registered on the subdomain for .sushibar/</p>
+                        <p class="text-muted">Static websites  built on the Handshake blockchain and registered as a subdomain for .sushibar/ </p>
                     </div>
                 </div>
             </div>
@@ -150,8 +150,8 @@
                                 <img class="img-fluid" src="15740.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading"><a href="https://www.freepik.com/vectors/background">Background vector created by katemangostar - www.freepik.com</a></div>
-                                <div class="portfolio-caption-subheading text-muted">Website Design</div>
+                                <div class="portfolio-caption-heading"> Partners</div>
+                                <div class="portfolio-caption-subheading text-muted"><a href="https://www.freepik.com/vectors/background">Background vector created by katemangostar - www.freepik.com</a></div>
                             </div>
                         </div>
                     </div>
@@ -172,7 +172,7 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="pexels-cottonbro-3338496.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>2009-2011</h4>
+                                <h4>&#129378;</h4>
                                 <h4 class="subheading">Birthed from our love of sushi and tech</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">We love sushi and technology and notticed many of our favorite sushibars didnt have a good website to scope the menu and call in ahead of time <</p></div>
@@ -185,7 +185,7 @@
                                 <h4>&#127843;</h4>
                                 <h4 class="subheading">SushiBar is Born</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">We started purchased .sushibar/ on the Handshake blockchain through Namebase.io and began to make static websites for our local sushi bars ins Santa Barbara</p></div>
+                            <div class="timeline-body"><p class="text-muted">We purchased .sushibar/ on the Handshake blockchain through Namebase.io and began to make static websites for our local sushi bars ins Santa Barbara</p></div>
                         </div>
                     </li>
                     <li>
@@ -229,12 +229,12 @@
                     <h2 class="section-heading text-uppercase">Our Sushi Chef</h2>
                     <h3 class="section-subheading text-muted"> Giving all sushi bars a spot on the web </h3>
                 </div>
-                <div class="row">
+                <div class="center">
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="riley.jpg" alt="..." />
-                            <h4>Jordan Sobel</h4>
-                            <p class="text-muted">Lead Designer</p>
+                            <img class="mx-auto rounded-circle" src="riley.jpg" alt="..." class=center />
+                            <h4>Jo-So</h4>
+                            <p class="text-muted">Lead Jedi</p>
                             <a class="btn btn-dark btn-social mx-2" href="joso.hns.to"><i class="fas fa-atom"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/jsobel1/"><i class="fab fa-linkedin-in"></i></a>
                         </div>
