--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                     <h2 class="section-heading text-uppercase">Our Sushi Chef</h2>
                     <h3 class="section-subheading text-muted"> Giving all sushi bars a spot on the web </h3>
                 </div>
-                <div class="center">
+                <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="riley.jpg" alt="..." class=center />
